--- a/src/BookingSystem/client/index.html
+++ b/src/BookingSystem/client/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html class="h-100" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>BookingSystem</title>
+    <title>Booking System</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 
-  <body>
-    <bs-root>Loading...</bs-root>
+  <body class="h-100">
+    <bs-root class="d-flex h-100">Loading app...</bs-root>
   </body>
 </html>
