Markup pages using flexbox (WIP)

--- a/src/BookingSystem/client/index.html
+++ b/src/BookingSystem/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="h-100" lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Booking System</title>
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 
-  <body class="h-100">
-    <bs-root class="d-flex h-100">Loading app...</bs-root>
+  <body>
+    <bs-root>Loading app...</bs-root>
   </body>
 </html>
